--- a/tproduct.html
+++ b/tproduct.html
@@ -30,7 +30,7 @@
                     <div class="total-price">₦0</div>
                 </div>
                 <!-- Buy Button -->
-                <button type="button" class="btn-buy">Pay Now</button>
+                <button type="button" class="btn-buy" onclick="window.location.href='payment.html';">Add info</button>
                 <!-- Close Cart -->
                 <i class='bx bx-x' id="close-cart"></i>
             </div>
