--- a/tproduct3.html
+++ b/tproduct3.html
@@ -27,10 +27,10 @@
                 <!-- Total -->
                 <div class="total">
                     <div class="total-title">Total</div>
-                    <div class="total-price">₦0</div>
+                    <div class="total-price" onclick="window.location.href='payment.html';">₦0</div>
                 </div>
                 <!-- Buy Button -->
-                <button type="button" class="btn-buy">Pay Now</button>
+                <button type="button" class="btn-buy" onclick="window.location.href='payment.html';">Add Info</button>
                 <!-- Close Cart -->
                 <i class='bx bx-x' id="close-cart"></i>
             </div>
