--- a/sproduct4.html
+++ b/sproduct4.html
@@ -114,9 +114,9 @@
 
         <div class="col">
             <h4>About</h4>
-            <a href="#">About us</a>
-            <a href="#">Delivery Service</a>
-            <a href="#">Privacy policy</a>
+            <a href="#" onclick="window.location.href='About.html';">About us</a>
+            <a href="#"onclick="window.location.href='.html';">Delivery Service</a>
+            <a href="#"onclick="window.location.href='privacypolicyhtml';">Privacy policy</a>
             <a href="#">Terms & Conditions</a>
             <a href="#">Contact Us</a>
         </div>
