--- a/tproduct6.html
+++ b/tproduct6.html
@@ -118,9 +118,9 @@
 
         <div class="col">
             <h4>About</h4>
-            <a href="#">About us</a>
-            <a href="#">Delivery Service</a>
-            <a href="#">Privacy policy</a>
+            <a href="#" onclick="window.location.href='About.html';">About us</a>
+            <a href="#"onclick="window.location.href='shippingpolicy.html';">Delivery Service</a>
+            <a href="#"onclick="window.location.href='privacypolicy.html';">Privacy policy</a>
             <a href="#">Terms & Conditions</a>
             <a href="#">Contact Us</a>
         </div>
