--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
     </header>
+    
     <!-- Product -->
     <section class="shop container">
         <h2 class="section-title">Shop Products</h2>
@@ -48,8 +49,9 @@
                 class="product img"
                 >
                 <div class="product-title">SUMENG Shiny Butterfly Necklace Exquisite Golden Crystal</div>
+                <li class="Lower-Alpha">₦35000.00</li>
                     <span class="price">₦1500.00</span>
-                    <i class='bx bx-shopping-bag add-cart'></i>
+                    <i class='bx bx-shopping-bag add-cart'onclick="window.location.href='https://paystack.com/buy/sumeng-shiny-butterfly-necklace-exquisite-golden-crys-nsobad';"></i>
                     <i class='bx bx-detail info' onclick="window.location.href='sproduct.html';"></i>
             </div>
         <!-- Box 2 -->
@@ -60,8 +62,9 @@
             >
             <div class="product-title">Tocona 6pcs/set bohemian 
                 beaded bracelet adjusted</div>
-                <span class="price">₦4000.00</span>
-                <i class='bx bx-shopping-bag add-cart'></i>
+                <li class="Lower-Alpha">₦15000.00</li>
+                <span class="price">₦4800.00</span>
+                <i class='bx bx-shopping-bag add-cart' onclick="window.location.href='https://paystack.com/buy/tocona-6pcs-sets-bohemian-beaded-bracelets-for-women';"></i>
                 <i class='bx bx-detail info' onclick="window.location.href='sproduct2.html';"></i>
         </div>
     <!-- Box 3 -->
@@ -71,8 +74,9 @@
         class="product img"
         >
         <div class="product-title">Men Chain Necklace Stainless Steel Gold | Stainless Steel Jewelry Necklace Women</div>
+        <li class="Lower-Alpha">₦4000.00</li>
             <span class="price">₦2000.00</span>
-            <i class='bx bx-shopping-bag add-cart'></i>
+            <i class='bx bx-shopping-bag add-cart' onclick="window.location.href='https://paystack.com/buy/men-chain-necklace-stainless-steel-gold-stainless-ste-pglbvm';"></i>
             <i class='bx bx-detail info' onclick="window.location.href='sproduct3.html';"></i>
     </div>
 <!-- Box 4 -->
@@ -84,8 +88,9 @@
     <div class="product-title">Love Heart Projection Necklace 100 Languages 
         I Love You Pendant With Rose Gift Box For 
         Girlfriend 2023 Fashion Luxury Jewelry</div>
-        <span class="price">₦9000.00</span>
-        <i class='bx bx-shopping-bag add-cart'></i>
+        <li class="Lower-Alpha">₦33000.00</li>
+        <span class="price">₦12700.00</span>
+        <i class='bx bx-shopping-bag add-cart' onclick="window.location.href='https://paystack.com/buy/tocona-6pcssets-bohemian-beaded-bracelets-for-women-p-xzpwnr';"></i>
         <i class='bx bx-detail info' onclick="window.location.href='sproduct4.html';"></i>
 </div>
 <!-- Box 5 -->
@@ -97,6 +102,7 @@
     <div class="product-title">New Fashion Vintage New Gossip Girl 
         Serena Red Heart With Love Pendant 
         Necklace Clavicle Chain Models Wholesales</div>
+        <li class="Lower-Alpha">₦2500.00</li>
         <span class="price">₦1500.00</span>
         <i class='bx bx-shopping-bag add-cart'></i>
         <i class='bx bx-detail info' onclick="window.location.href='sproduct5.html';"></i>
@@ -111,6 +117,7 @@
         For Woman Pendant 925 Silver Necklace 
         For Women Chains Party Bridal Fine Jewelry
     </div>
+    <li class="Lower-Alpha">₦23000.00</li>
         <span class="price">₦8000.00</span>
         <i class='bx bx-shopping-bag add-cart'></i>
         <i class='bx bx-detail info' onclick="window.location.href='sproduct6.html';"></i>
@@ -124,7 +131,8 @@
     <div class="product-title">Serenity Day 1 Carat Real Moissanite
         Pendant Necklace for Women Top Quality
          100% S925 Sterling Silver Wedding Bridal Jewelry</div>
-        <span class="price">₦7500.00</span>
+         <li class="Lower-Alpha">₦22000.00</li>
+        <span class="price">₦10500.00</span>
         <i class='bx bx-shopping-bag add-cart'></i>
         <i class='bx bx-detail info' onclick="window.location.href='sproduct7.html';"></i>
 </div>
@@ -137,7 +145,8 @@
     <div class="product-title">Sterling Silver Bracelet Fit Original 
         Design Beads Charms DIY Jewelry Making 
         Dazzling CZ Chain Bracelet For Women</div>
-        <span class="price">₦3200.00</span>
+        <li class="Lower-Alpha">₦20000.00</li>
+        <span class="price">₦4400.00</span>
         <i class='bx bx-shopping-bag add-cart'></i>
         <i class='bx bx-detail info' onclick="window.location.href='sproduct8.html';"></i>
 </div>
@@ -255,6 +264,7 @@
 </div>
 </div>  
     </section>
+    
 
     <Footer class="section-p1">
         <div class="col">
