--- a/sproduct4.html
+++ b/sproduct4.html
@@ -65,7 +65,7 @@
             <h4>Love Heart Projection Necklace 100 Languages 
                 I Love You Pendant With Rose Gift Box For 
                 Girlfriend 2023 Fashion Luxury Jewelry</h4>
-              <h2>₦9000.00</h2>
+              <h2>₦12700.00</h2>
                 <h4>Product Details</h4>
                 <span>Dear friend, I am honored to introduce
                     this product to you. If you need to 
@@ -91,6 +91,11 @@
                     </span> <br>
                     <a href="#" class="sp-btn" onclick="window.location.href='index.html';">Back To Homepage</a>
         </div>
+       </section>
+
+       <section>
+        <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%"> Get over 40% discount on every order
+            you make with us, and also do not forget to contact us for more information.</marquee>
        </section>
 
        <Footer class="section-p1">
