--- a/payment.html
+++ b/payment.html
@@ -14,12 +14,8 @@
           <input type="email" id="email-address" required />
         </div>
         <div class="form-group">
-          <label for="Product name">Product name</label>
-          <input type="text" id="Product name" />
-        </div>
-        <div class="form-group">
-          <label for="amount">Amount</label>
-          <input type="tel" id="amount" required />
+          <label for="Address Details">Address Details</label>
+          <input type="text" id="Address Details" />
         </div>
         <div class="form-group">
           <label for="first-name">First Name</label>
@@ -32,18 +28,35 @@
         <div class="form-group">
           <label for="Phone-number">Phone Number</label>
           <input type="text" id="Phone-number" />
+        </div> 
+        <div class="form-group">
+          <label for="Product name">Product name</label>
+          <input type="text" id="Product name" />
+        </div>
+        <div class="form-group">
+          <label for="quantity">Quantity</label>
+          <input type="text" id="Quality" />
+        </div>
+        <div class="form-group">
+          <label for="amount">Amount</label>
+          <input type="tel" id="amount" required />
         </div>
         <div class="form-submit">
           <button type="submit" onclick="payWithPaystack()"> Pay </button>
         </div>
 
-        <div id="Warning" class="section"> Warning: Make sure you write the total amount (price) & product names of
-          goods you added on your cart page, if you put in the wrong amount, 
-          your payment will not be authorised by our staff.
+        <div id="Warning" class="section"> Warning: Make sure you write the total amount (price) quantity and product
+          names of goods you added on your cart page, if you put in the wrong amount, your payment will not be authorised
+          by our staff.
         </div>
         <a href="#" class="ss-btn" onclick="window.location.href='index.html';">Back To Homepage</a>
       </form>
-      
+      <section>
+        <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Make sure you provide the necessary information that
+          is required before you pay. When inputing the product you want to buy, make sure it the same product name, 
+          quantity and amount you added on cart page. For more information check our About page.
+        </marquee>
+       </section>
       
       <script src="https://js.paystack.co/v1/inline.js"></script> 
       <script src="JS/payment.js"></script>
