--- a/tproduct4.html
+++ b/tproduct4.html
@@ -84,6 +84,11 @@
         </div>
        </section>
 
+       <section>
+        <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%"> Get over 40% discount on every order
+            you make with us, and also do not forget to contact us for more information.</marquee>
+       </section>
+
        <Footer class="section-p1">
         <div class="col">
             <a href="#" class="logo">ProjectBargain</a>
